# noavoiceai_agent

./: .env.example  .gitignore  ARCHITECTURE_CHANGES.txt  Dockerfile  TEST_SUMMARY.md  TOOL_DEBUGGING.txt  api_endpoints.md  bot.py  bot_runner.py  pyproject.toml  render.yaml  requirements.txt  test_api_debug.py  test_booking.py  test_tool_registration.py
agent/: bot.py  config.py  health.py  main.py  prompts.py
agent/services/: api_client.py
agent/tools/: booking_tools.py
agent/utils/: logger.py
client/: daily-client.html  index.html  test.html  webrtc-client.html
tests/: test_api_client.py  test_booking_agent.py
